--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <title>Arcadia</title>
 </head>
 <body>
     <header>  
-        Le menu du site
+        Le menu du site <i class="bi bi-balloon-heart"></i>
     </header>
       <main id="main-page">
         <!-- Le contenu de la page sera ici-->
@@ -16,5 +18,6 @@
         Le footer
     </footer>
     <script type="module" src="Router/router.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
