--- a/index.html
+++ b/index.html
@@ -11,7 +11,27 @@
 </head>
 <body>
     <header>  
-        Le menu du site <i class="bi bi-balloon-heart"></i>
+      <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Arcadia</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Fonctionnalités</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Prix</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
       <main id="main-page">
         <!-- Le contenu de la page sera ici-->
