Section habitats dans accueil

--- a/pages/404.html
+++ b/pages/404.html
@@ -5,6 +5,6 @@
     <p>
         SORRY
     </p>
-    <P><a href="/"> Retour a l'accueil</a>
+    <P><a href="/accueil"> Retour a l'accueil</a>
     </P>
 </div>
