--- a/pages/home.html
+++ b/pages/home.html
@@ -24,6 +24,61 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+<!--Debut de la marge-->
+<div class="container"> 
+  <!--Debut presentation--> 
+   <div>
+      <article>
+        <div class="p-4">
+            <h2 class="text-center text-secondary">Présentation</h2>
+            <div class="row row-cols-2 align-items-center">
+                <div class="col">
+                    <p class="text-justify text-secondary">
+                        Bienvenue sur le site de notre restaurant gastronomique situé au cœur de la magnifique ville de Chambéry. Le chef Arnaut Michant vous invite à découvrir un voyage culinaire mémorable.
+                    </p>
+                </div>
+                <div class="col p-3">
+                   <img class="w-100 rounded" src="/images/LOGO ECOLOGIE.webp"/>
+                </div>
+            </div>
+          </div>
+      </article>
+   </div>
+   <!--fin presentation-->
+   <!--Debut habitats-->
+   <div class="bg-warning text-white text-center mx-0 pb-2">
+      <div class="row container ms-auto">
+          <div>
+              <h3 class="text-primary"></br>Nos habitats</h3>
+          </div>
+          <div class="row row-cols-1 row-cols-md-3 row-cols-lg-3 align-items-center">
+            <div class="pb-3 image-card">
+              <img class="w-100 rounded" src="/images/Jungle.jpg" class="rounded mx-auto d-block" alt="jungle" height="200px" width="220px"> 
+              <p class="titre-image"><a href="/marais">Jungle</a></p>
+              <p>Lorem impsum</p>
+              <button type="button" class="btn btn-primary">Les animaux</button>
+            </div>
+            <div class="pb-3 image-card">
+              <img class="w-100 rounded" src="/images/Savane.jpg" class="rounded mx-auto d-block" alt="savane" height="200px" width="220px"> 
+              <p class="titre-image"><a href="/marais">Savane</a></p>
+              <p>Lorem impsum</p>
+              <button type="button" class="btn btn-primary ">Les animaux</button>
+            </div>
+            <div class="pb-3 image-card">
+              <img class="w-100 rounded" src="/images/Marais.jpg" class="rounded mx-auto d-block" alt="marais" height="200px" width="220px"> 
+              <p class="titre-image"><a href="/marais">Marais</a></p>
+              <p>Lorem impsum</p>
+              <button type="button" class="btn btn-primary">Les animaux</button>
+            </div>
+          </div>
+        </div>
+   </div>
+  <!--fin habitats-->
+  <!--Debut services-->
+  <!--fin services-->
+  <!--Debut des avis-->
+  <!--fin des avis-->
+</div>
 
 
 
