section services dans l'accueil

--- a/pages/home.html
+++ b/pages/home.html
@@ -75,6 +75,28 @@
    </div>
   <!--fin habitats-->
   <!--Debut services-->
+<div class="bg-primary text-white text-center pb-3">
+  <div >
+        <div>
+            <h3 class="text-secondary"></br>Nos Services</h3>
+        </div>
+          <div class="image-card">
+            <img src="/images/Visitemodif.jpg" class="img-fluid" alt="jungle" height="160px" width="100%"> 
+            <p class="titre-image"><a href="/marais">Visite guidée</a></p>
+          </div>
+          <div class="image-card">
+            <img src="/images/Petit trainmodif.jpg" class="img-fluid" alt="savane" height="160px" width="100%"> 
+            <p class="titre-image"><a href="/marais">Petit train</a></p>
+          </div>
+          <div class="image-card pb-3">
+            <img src="/images/Restaurantmodif.jpg" class="img-fluid" alt="marais" height="160px" width="100%"> 
+            <p class="titre-image"><a href="/marais">Restaurant</a></p>
+          </div>
+          <div>
+            <button type="button" class="btn btn-secondary">En savoir plus</button>
+          </div>
+        </div>
+      </div>
   <!--fin services-->
   <!--Debut des avis-->
   <!--fin des avis-->
