Suppression menu deroulant navbar

--- a/index.html
+++ b/index.html
@@ -32,17 +32,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/services">Services</a>
               </li>
-              <!--Menu deroulant "Habitats"-->
-              <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" href="/habitats" >Habitats
-                </button>
-                <ul class="dropdown-menu dropdown-menu-secondary" style="background-color: #345D3D;">
-                  <li><a class="dropdown-item" href="/jungle">Jungle</a></li>
-                  <li><a class="dropdown-item" href="/savane">Savane</a></li>
-                  <li><a class="dropdown-item" href="/marais">Marais</a></li>
-                </ul>
-              </div>
-              <!--Fin enu deroulant "Habitats"-->
+              <li class="nav-item">
+                <a class="nav-link" href="/habitats">Habitats</a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="/">Contacts</a>
               </li>
