--- a/pages/home.html
+++ b/pages/home.html
@@ -99,6 +99,12 @@
       </div>
   <!--fin services-->
   <!--Debut des avis-->
+  
+  
+  <div class="form-floating">
+    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+    <label for="floatingTextarea">Comments</label>
+  </div>
   <!--fin des avis-->
 </div>
 
