page infos pratiques

--- a/pages/home.html
+++ b/pages/home.html
@@ -30,7 +30,7 @@
    <div>
       <article>
         <div class="p-4">
-            <h2 class="text-center text-secondary">Présentation</h2>
+            <h1 class="text-center text-secondary">Présentation</h1>
             <div class="row row-cols-2 align-items-center">
                 <div class="col">
                     <p class="text-justify text-secondary">
@@ -49,7 +49,7 @@
    <div class="bg-warning text-white text-center mx-0 pb-2">
       <div class="row container ms-auto">
           <div>
-              <h3 class="text-primary"></br>Nos habitats</h3>
+              <h1 class="text-primary pb-3"></br>Nos habitats</h1>
           </div>
           <div class="row row-cols-1 row-cols-md-3 row-cols-lg-3 align-items-center">
             <div class="pb-3 image-card">
@@ -77,7 +77,7 @@
   <!--Debut services-->
  <div class="bg-primary text-white text-center pb-3">
     <div>
-      <h3 class="text-secondary"></br>Nos Services</h3>
+      <h1 class="text-secondary pb-4"></br>Nos Services</h1>
     </div>
     <div class="image-card">
       <img src="/images/Visitemodif.jpg" class="img-fluid" alt="jungle" height="160px" width="100%"> 
