--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a class="nav-link" href="/habitats">Habitats</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/">Contacts</a>
+                <a class="nav-link" href="/infospratiques">Infos pratiques</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/connexion">Se connecter</a>
@@ -54,7 +54,7 @@
     <footer class="bg-secondary text-white text-center footer">
       <div class="row">
           <div>
-            <h3 class="text-primary"></br>Nos horaires</h3></br>
+            <h1 class="text-primary"></br>Nos horaires</h1></br>
               <div class="row row-cols-1 row-cols-lg-2 align-items-center">
                 <p>
                   Du lundi au vendredi     10:00-17:30 
