--- a/pages/habitats.html
+++ b/pages/habitats.html
@@ -2,7 +2,7 @@
  <div class="bg-warning text-white text-center mx-0 pb-2">
     <div class="row container ms-auto">
         <div>
-            <h3 class="text-primary"></br>Nos habitats</h3>
+            <h3 class="text-primary pb-3"></br>Nos habitats</h3>
         </div>
         <div class="row row-cols-1 row-cols-md-3 row-cols-lg-3 align-items-center">
           <div class="pb-3 image-card">
