Ajout page habitats

--- a/pages/habitats.html
+++ b/pages/habitats.html
@@ -1,5 +1,5 @@
 <div class="container">
- <div class="bg-warning text-white text-center mx-0 pb-2">
+ <div class="bg-warning text-white text-center mx-0 pb-0" id="longeur">
     <div class="row container ms-auto">
         <div>
             <h3 class="text-primary pb-3"></br>Nos habitats</h3>
