Ajout page jungle

--- a/pages/home.html
+++ b/pages/home.html
@@ -51,24 +51,18 @@
           <div>
               <h1 class="text-primary pb-3"></br>Nos habitats</h1>
           </div>
-          <div class="row row-cols-1 row-cols-md-3 row-cols-lg-3 align-items-center">
-            <div class="pb-3 image-card">
-              <img class="w-100 rounded" src="/images/Jungle.jpg" class="rounded mx-auto d-block" alt="jungle" height="200px" width="220px"> 
-              <p class="titre-image"><a href="/marais">Jungle</a></p>
-              <p>Lorem impsum</p>
-              <button type="button" class="btn btn-primary">Les animaux</button>
+          <div class="row row-cols-1 row-cols-md-3 row-cols-lg-3 align-items-center p-3">
+            <div>
+              <img class="w-100 rounded p-3 mx-auto d-block" src="/images/Jungle.jpg" alt="jungle" height="200px" width="220px"> 
+              <h2><a href="/jungle">Jungle</a></h2>
             </div>
-            <div class="pb-3 image-card">
-              <img class="w-100 rounded" src="/images/Savane.jpg" class="rounded mx-auto d-block" alt="savane" height="200px" width="220px"> 
-              <p class="titre-image"><a href="/marais">Savane</a></p>
-              <p>Lorem impsum</p>
-              <button type="button" class="btn btn-primary ">Les animaux</button>
+            <div>
+              <img class="rounded w-100  p-3 mx-auto d-block" src="/images/Savane.jpg"alt="savane" height="200px" width="220px"> 
+              <h2><a href="/savane">Savane</a></h2>
             </div>
-            <div class="pb-3 image-card">
-              <img class="w-100 rounded" src="/images/Marais.jpg" class="rounded mx-auto d-block" alt="marais" height="200px" width="220px"> 
-              <p class="titre-image"><a href="/marais">Marais</a></p>
-              <p>Lorem impsum</p>
-              <button type="button" class="btn btn-primary">Les animaux</button>
+            <div>
+              <img class="w-100 rounded p-3 mx-auto d-block" src="/images/Marais.jpg" alt="marais" height="200px" width="220px"> 
+              <h2><a href="/marais">Marais</a></h2>
             </div>
           </div>
         </div>
