Ajout description presentation

--- a/pages/habitats/habitats.html
+++ b/pages/habitats/habitats.html
@@ -1,23 +1,55 @@
 <div class="container">
- <div class="bg-warning text-white text-center mx-0 pb-0" id="longeur">
+  <div class="bg-warning text-white text-justify mx-0 pb-0" id="longeur">
     <div class="row container ms-auto">
         <div>
-            <h3 class="text-secondary pb-3"></br>Nos habitats</h3>
+            <h3 class="text-secondary p-3 text-center"></br>Nos habitats</h3>
         </div>
-        <div class="row row-cols-1 align-items-center">
-          <div class="p-3">
-            <img class="w-100 rounded p-3" src="/images/Jungle.jpg" class="rounded mx-auto d-block" alt="jungle"> 
-            <h2><a href="/jungle">Jungle</a></h2>
+        <div class="row row-cols-1 row-cols-lg-3 align-items-center">
+          <div>
+            <img src="/images/Jungle.jpg" class="w-100 rounded d-block text-white" alt="jungle" height="250px"> 
+            <h1 class="text-center"><a href="/jungle">Jungle</a></h1>
+            <h2>Explorez la densité mystérieuse de la jungle, un paradis tropical.</h2> 
+            <p>Dans la Jungle Luxuriante, vous serez plongé dans un univers végétal épais et mystérieux. Les sons de la nature tropicale vous entoureront,
+              tandis que vous verrez Rajah le tigre se fondre dans les feuillages ou Coco le chimpanzé sauter d'arbre en arbre. La jungle recrée un environnement dense, 
+              avec une flore abondante qui sert de maison à des créatures étonnantes comme Maya le jaguar et le serpent Kaa. Cet espace est dédié à la diversité des forêts tropicales du monde entier.
+            </p>
+            <h2>Points forts :</h2>
+            <ul>
+              <li>Immersion totale dans une jungle dense avec des végétaux et animaux tropicaux.</li>
+              <li>Découverte de la biodiversité incroyable de la forêt tropicale, l'un des écosystèmes les plus menacés au monde.</li>
+              <li>Sentiers sinueux et observatoires dissimulés pour observer la faune sans la perturber.</li>
+            </ul>
           </div>
-          <div class="p-3">
-            <img class="w-100 rounded p-3" src="/images/Savane.jpg" class="rounded mx-auto d-block" alt="savane"> 
-            <h2><a href="/savane">Savane</a></h2>
+          <div>
+            <img src="/images/Savanemodif2.jpg" class="w-100 rounded d-block text-white" alt="savane" height="250px"> 
+            <h1 class="text-center"><a href="/savane">Savane</a></h1>
+            <h2>Vivez l'immensité de la savane africaine, un espace vaste et ensoleillé.</h2> 
+              <p>Dans cette zone, vous serez transporté au cœur des grandes plaines africaines, où les herbes dorées ondulent sous le vent. Observez les majestueux Simba le lion 
+                et Zuri la girafe se déplacer gracieusement, tandis que Makena le zèbre et le rapide Nala le guépard ajoutent une touche d'aventure. La Savane Africaine reproduit fidèlement cet habitat emblématique, 
+                permettant aux animaux d'évoluer dans un environnement qui leur est familier.
+              </p>
+              <h2>Points forts :</h2>
+              <ul>
+                 <li>Rencontre avec les grands prédateurs de la savane.</li>
+                 <li>Apprenez-en davantage sur les efforts de conservation pour ces espèces en danger.</li>
+                 <li>Vastes espaces ouverts, parfaits pour l'observation des comportements naturels des animaux.</li>
+              </ul>
           </div>
-          <div class="p-3">
-            <img class="w-100 rounded p-3" src="/images/Marais.jpg" class="rounded mx-auto d-block" alt="marais"> 
-            <h2><a href="/marais">Marais</a></h2>
+          <div>
+            <img src="/images/Marais.jpg" class="w-100 rounded d-block text-white" alt="marais" height="250px"> 
+            <h1 class="text-center"><a href="/marais">Marais</a></h1>
+            <h2>Entrez dans un monde humide et mystérieux, où la terre et l’eau se rencontrent.</h2> 
+            <p>La zone des marais du zoo Arcadia recrée un environnement marécageux fascinant. C’est ici que résident les impressionnants Gator le crocodile et Bongo l'hippopotame, 
+              évoluant dans les eaux calmes. Les visiteurs pourront également admirer Shelly la tortue, paisiblement perchée sur une roche, et observer la faune et la flore qui prospèrent dans cet écosystème riche et diversifié.
+            </p>
+            <h2>Points forts :</h2>
+            <ul>
+              <li>Observez des animaux amphibies uniques dans un cadre semi-aquatique.</li>
+              <li>Approchez des espèces souvent méconnues et essentielles à l’équilibre écologique des zones humides.</li>
+              <li>Environnement calme, propice à l’exploration tranquille.</li>
+            </ul>
           </div>
         </div>
-      </div>
- </div>
+    </div>
+  </div>
 </div>
