--- a/pages/home.html
+++ b/pages/home.html
@@ -31,10 +31,20 @@
       <article>
         <div class="p-4">
             <h1 class="text-center text-secondary">Présentation</h1>
-            <div class="row row-cols-2 align-items-center">
-                <div class="col">
-                    <p class="text-justify text-secondary">
-                        Bienvenue sur le site de notre restaurant gastronomique situé au cœur de la magnifique ville de Chambéry. Le chef Arnaut Michant vous invite à découvrir un voyage culinaire mémorable.
+            <div class="row row-cols-lg-2 align-items-center">
+                <div class="col text-justify text-secondary text-justify p-3">
+                    <h2>Bienvenue au Zoo Écoresponsable Arcadia</h2>
+                    <p>Plongez au cœur de la nature tout en contribuant à la préservation de notre planète.
+                      Le Zoo Arcadia, entièrement alimenté par des énergies renouvelables, offre une expérience unique en mettant en avant la biodiversité et les efforts pour un avenir durable. Nous accueillons petits et grands dans un espace respectueux de l’environnement où chaque visite soutient notre engagement pour la conservation.
+                    </p> 
+                    <h2>Nos Animaux</h2>
+                    <p>Arcadia abrite une incroyable diversité d'animaux, venus de différents écosystèmes du monde. Chaque zone du parc est dédiée à un habitat spécifique :</p>
+                    <ul>
+                      <li>Savane Africaine : Découvrez le roi des animaux, Simba le lion, ainsi que Zuri la girafe et Makena le zèbre, tous vivant en harmonie dans une vaste plaine.</li>
+                      <li>Marais Mystérieux : Observez de près Gator le crocodile, Bongo l’hippopotame, et Shelly la tortue dans leur habitat naturel, un espace frais et humide.</li>
+                      <li>Jungle Luxuriante : Explorez la jungle avec Rajah le tigre, Coco le chimpanzé, et Maya le jaguar, évoluant dans une végétation dense, recréant les forêts tropicales du monde entier.</li>
+                    </ul>  
+                    <p>Venez vivre une expérience unique au Zoo Arcadia, où chaque visite est une rencontre inoubliable avec la nature !
                     </p>
                 </div>
                 <div class="col p-3">
