--- a/pages/habitats/jungle.html
+++ b/pages/habitats/jungle.html
@@ -7,27 +7,37 @@
             <h1>Jungle</h1>
         </div>
         <div class="text-justify p-3">
-            <p>description</p>
+          <h2>Explorez la densité mystérieuse de la jungle, un paradis tropical.</h2> 
+          <p>Dans la Jungle Luxuriante, vous serez plongé dans un univers végétal épais et mystérieux. Les sons de la nature tropicale vous entoureront,
+            tandis que vous verrez Rajah le tigre se fondre dans les feuillages ou Coco le chimpanzé sauter d'arbre en arbre. La jungle recrée un environnement dense, 
+            avec une flore abondante qui sert de maison à des créatures étonnantes comme Maya le jaguar et le serpent Kaa. Cet espace est dédié à la diversité des forêts tropicales du monde entier.
+          </p>
+          <h2>Points forts :</h2>
+          <ul>
+            <li>Immersion totale dans une jungle dense avec des végétaux et animaux tropicaux.</li>
+            <li>Découverte de la biodiversité incroyable de la forêt tropicale, l'un des écosystèmes les plus menacés au monde.</li>
+            <li>Sentiers sinueux et observatoires dissimulés pour observer la faune sans la perturber.</li>
+          </ul>
         </div>
         <div class="row row-cols-2 row-cols-md-3 row-cols-lg-3 text-center">
             <div>
-                <img class="w-100 rounded mx-auto d-block" src="/images/Gorille.jpg" alt="Gorille" height="250px"> 
+                <img class="w-100 rounded mx-auto d-block" src="/images/animaux/jungle/Gorille.jpg" alt="Gorille" height="220px"> 
                 <h2 class="p-3"><a href="/gorille">Koko</br>Le Gorille</a></h2>
               </div>
               <div>
-                <img class="w-100 rounded mx-auto d-block" src="/images/Jaguard.jpg"alt="Jaguard" height="250px"> 
+                <img class="w-100 rounded mx-auto d-block" src="/images/animaux/jungle/Jaguard.jpg"alt="Jaguard" height="220px"> 
                 <h2 class="p-3"><a href="/jaguard">Maya</br>Le Jaguard</a></h2>
               </div>
               <div>
-                <img class="w-100 rounded mx-auto d-block" src="/images/Python.jpg" alt="Python" height="250px"> 
+                <img class="w-100 rounded mx-auto d-block" src="/images/animaux/jungle/Python.jpg" alt="Python" height="220px"> 
                 <h2 class="p-3"><a href="/python">Kaa</br>Le Python</a></h2>
               </div>
               <div>
-                <img class="w-100 rounded mx-auto d-block" src="/images/Perroquet.jpg" alt="Perroquet" height="250px"> 
+                <img class="w-100 rounded mx-auto d-block" src="/images/animaux/jungle/Perroquet.jpg" alt="Perroquet" height="220px"> 
                 <h2 class="p-3"><a href="/perroquet">Rio</br>Le Perroquet</a></h2>
               </div>
               <div>
-                <img class="w-100 rounded mx-auto d-block" src="/images/Tigre.jpg" alt="Tigre" height="250px"> 
+                <img class="w-100 rounded mx-auto d-block" src="/images/animaux/jungle/Tigre.jpg" alt="Tigre" height="220px"> 
                 <h2 class="p-3"><a href="/tigre">Rajah</br>Le Tigre</a></h2>
               </div>
         </div>
