--- a/pages/habitats/marais.html
+++ b/pages/habitats/marais.html
@@ -1,44 +1,39 @@
-<div></div>
+<div>
     <div class="row">
-        <img class="img-fluid row-cols-lg-12" src="/images/Junglemodif.jpg"></img>
+        <img class="img-fluid row-cols-lg-12" src="/images/Maraismodif.jpg"></img>
     </div>
     <div class="container">
         <div class="text-secondary text-center p-3">
-            <h1>Jungle</h1>
+            <h1>Marais</h1>
         </div>
         <div class="text-justify p-3">
-            <h2>Explorez la densité mystérieuse de la jungle, un paradis tropical.</h2> 
-              <p>Dans la Jungle Luxuriante, vous serez plongé dans un univers végétal épais et mystérieux. Les sons de la nature tropicale vous entoureront,
-                tandis que vous verrez Rajah le tigre se fondre dans les feuillages ou Coco le chimpanzé sauter d'arbre en arbre. La jungle recrée un environnement dense, 
-                avec une flore abondante qui sert de maison à des créatures étonnantes comme Maya le jaguar et le serpent Kaa. Cet espace est dédié à la diversité des forêts tropicales du monde entier.
-              </p>
-              <h2>Points forts :</h2>
-              <ul>
-                <li>Immersion totale dans une jungle dense avec des végétaux et animaux tropicaux.</li>
-                <li>Découverte de la biodiversité incroyable de la forêt tropicale, l'un des écosystèmes les plus menacés au monde.</li>
-                <li>Sentiers sinueux et observatoires dissimulés pour observer la faune sans la perturber.</li>
-              </ul></p>
+            <h2>Entrez dans un monde humide et mystérieux, où la terre et l'eau se rencontrent.</h2> 
+            <p>La zone des marais du zoo Arcadia recrée un environnement marécageux fascinant. C'est ici que résident les impressionnants Gator le crocodile et Bongo l'hippopotame, 
+              évoluant dans les eaux calmes. Les visiteurs pourront également admirer Shelly la tortue, paisiblement perchée sur une roche, et observer la faune et la flore qui prospèrent dans cet écosystème riche et diversifié.
+            </p>
+            <h2>Points forts :</h2>
+            <ul>
+              <li>Observez des animaux amphibies uniques dans un cadre semi-aquatique.</li>
+              <li>Approchez des espèces souvent méconnues et essentielles à l'équilibre écologique des zones humides.</li>
+              <li>Environnement calme, propice à l'exploration tranquille.</li>
+            </ul>
         </div>
         <div class="row row-cols-2 row-cols-md-3 row-cols-lg-3 text-center">
             <div>
-                <img class="w-100 rounded mx-auto d-block" src="/images/Gorille.jpg" alt="Gorille" height="250px"> 
-                <h2 class="p-3"><a href="/gorille">Koko</br>Le Gorille</a></h2>
+                <img class="w-100 rounded mx-auto d-block" src="/images/animaux/marais/Crocodile.jpg" alt="Crocodile" height="220px"> 
+                <h2 class="p-3"><a href="/crocodile">Koko</br>Le Crocodile</a></h2>
               </div>
               <div>
-                <img class="w-100 rounded mx-auto d-block" src="/images/Jaguard.jpg"alt="Jaguard" height="250px"> 
-                <h2 class="p-3"><a href="/jaguard">Maya</br>Le Jaguard</a></h2>
+                <img class="w-100 rounded mx-auto d-block" src="/images/animaux/marais/hippopotame.jpg"alt="Hippopotame" height="220px"> 
+                <h2 class="p-3"><a href="/hippopotame">Maya</br>L'Hippopotame</a></h2>
               </div>
               <div>
-                <img class="w-100 rounded mx-auto d-block" src="/images/Python.jpg" alt="Python" height="250px"> 
-                <h2 class="p-3"><a href="/python">Kaa</br>Le Python</a></h2>
+                <img class="w-100 rounded mx-auto d-block" src="/images/animaux/marais/Ibis.jpg" alt="Ibis" height="220px"> 
+                <h2 class="p-3"><a href="/python">Kaa</br>L'Ibis</a></h2>
               </div>
               <div>
-                <img class="w-100 rounded mx-auto d-block" src="/images/Perroquet.jpg" alt="Perroquet" height="250px"> 
-                <h2 class="p-3"><a href="/perroquet">Rio</br>Le Perroquet</a></h2>
-              </div>
-              <div>
-                <img class="w-100 rounded mx-auto d-block" src="/images/Tigre.jpg" alt="Tigre" height="250px"> 
-                <h2 class="p-3"><a href="/tigre">Rajah</br>Le Tigre</a></h2>
+                <img class="w-100 rounded mx-auto d-block" src="/images/animaux/marais/Tortue.jpg" alt="Tortue" height="220px"> 
+                <h2 class="p-3"><a href="/perroquet">Rio</br>La Tortue</a></h2>
               </div>
         </div>
     </div>
