--- a/pages/home.html
+++ b/pages/home.html
@@ -6,13 +6,13 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/images/Elephantmodif.jpg" class="d-block w-100" alt="...">
+      <img src="/images/carroussel/Elephantmodif.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="/images/Giraffecarroussel.jpg" class="d-block w-100" alt="...">
+      <img src="/images/carroussel/Giraffecarroussel.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="/images/Pythoncarroussel.jpg" class="d-block w-100" alt="...">
+      <img src="/images/carroussel/Pythoncarroussel.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -48,7 +48,7 @@
                     </p>
                 </div>
                 <div class="col p-3">
-                   <img class="w-100 rounded" src="/images/LOGO ECOLOGIE.webp"/>
+                   <img class="w-100 rounded" src="/images/Logo/LOGO ECOLOGIE.webp"/>
                 </div>
             </div>
           </div>
@@ -63,15 +63,15 @@
           </div>
           <div class="row row-cols-1 row-cols-md-3 row-cols-lg-3 align-items-center p-3">
             <div>
-              <img class="w-100 rounded p-3 mx-auto d-block" src="/images/Jungle.jpg" alt="jungle" height="200px" width="220px"> 
+              <img class="w-100 rounded p-3 mx-auto d-block" src="/images/habitats/Jungle.jpg" alt="jungle" height="200px" width="220px"> 
               <h2><a href="/jungle">Jungle</a></h2>
             </div>
             <div>
-              <img class="rounded w-100  p-3 mx-auto d-block" src="/images/Savane.jpg"alt="savane" height="200px" width="220px"> 
+              <img class="rounded w-100  p-3 mx-auto d-block" src="/images/habitats/Savane.jpg"alt="savane" height="200px" width="220px"> 
               <h2><a href="/savane">Savane</a></h2>
             </div>
             <div>
-              <img class="w-100 rounded p-3 mx-auto d-block" src="/images/Marais.jpg" alt="marais" height="200px" width="220px"> 
+              <img class="w-100 rounded p-3 mx-auto d-block" src="/images/habitats/Marais.jpg" alt="marais" height="200px" width="220px"> 
               <h2><a href="/marais">Marais</a></h2>
             </div>
           </div>
@@ -84,15 +84,15 @@
       <h1 class="text-secondary pb-4"></br>Nos Services</h1>
     </div>
     <div class="image-card">
-      <img src="/images/Visitemodif.jpg" class="img-fluid" alt="jungle" height="160px" width="100%"> 
+      <img src="/images/services/Visitemodif.jpg" class="img-fluid" alt="jungle" height="160px" width="100%"> 
         <p class="titre-image text-secondary">Visite guidée</a></p>
     </div>
     <div class="image-card">
-      <img src="/images/Petit trainmodif.jpg" class="img-fluid" alt="savane" height="160px" width="100%"> 
+      <img src="/images/services/Petit trainmodif.jpg" class="img-fluid" alt="savane" height="160px" width="100%"> 
         <p class="titre-image text-secondary">Petit train</a></p>
     </div>
     <div class="image-card pb-3">
-      <img src="/images/Restaurantmodif.jpg" class="img-fluid" alt="marais" height="160px" width="100%"> 
+      <img src="/images/services/Restaurantmodif.jpg" class="img-fluid" alt="marais" height="160px" width="100%"> 
         <p class="titre-image text-secondary">Restaurant</p>
     </div>
     <div>
