Ajout des boutons pour changer d'habitat

--- a/pages/habitats/jungle.html
+++ b/pages/habitats/jungle.html
@@ -41,5 +41,9 @@
                 <h2 class="p-3"><a href="/tigre">Rajah</br>Le Tigre</a></h2>
               </div>
         </div>
+        <div class="row justify-content-evenly p-3">
+          <button type="button" class="btn btn-primary col-4"><a class="text-white" href="/savane"><h2>Savane</h2></a></button>
+          <button type="button" class="btn btn-primary col-4"><a class="text-white" href="/marais"><h2>Marais</h2></a></button>
+        </div>
     </div>
 </div>
