--- a/pages/habitats/savane.html
+++ b/pages/habitats/savane.html
@@ -1,4 +1,4 @@
-<div></div>
+<div>
     <div class="row">
         <img class="img-fluid row-cols-lg-12" src="/images/Savanemodif.jpg"></img>
     </div>
@@ -20,7 +20,7 @@
             </ul>
         </div>
         <div class="row row-cols-2 row-cols-md-3 row-cols-lg-3 text-center">
-            <div>
+              <div>
                 <img class="w-100 rounded mx-auto d-block" src="/images/animaux/savane/Lion.jpg" alt="Lion" height="220px"> 
                 <h2 class="p-3"><a href="/lion">Simba</br>Le Lion</a></h2>
               </div>
@@ -40,6 +40,10 @@
                 <img class="w-100 rounded mx-auto d-block" src="/images/animaux/savane/Guépard.jpg" alt="Guépard" height="220px"> 
                 <h2 class="p-3"><a href="/guepard">Rajah</br>Le Guépard</a></h2>
               </div>
+        </div>
+        <div class="row justify-content-evenly p-3">
+          <button type="button" class="btn btn-primary col-4"><a class="text-white" href="/jungle"><h2>Jungle</h2></a></button>
+          <button type="button" class="btn btn-primary col-4"><a class="text-white" href="/marais"><h2>Marais</h2></a></button>
         </div>
     </div>
 </div>
