--- a/pages/home.html
+++ b/pages/home.html
@@ -63,16 +63,16 @@
           </div>
           <div class="row row-cols-1 row-cols-md-3 row-cols-lg-3 align-items-center p-3">
             <div>
-              <img class="w-100 rounded p-3 mx-auto d-block" src="/images/habitats/Jungle.jpg" alt="jungle" height="200px" width="220px"> 
-              <h2><a href="/jungle">Jungle</a></h2>
+              <img class="w-100 rounded mx-auto d-block" src="/images/habitats/Jungle.jpg" alt="jungle" height="200px" width="220px"> 
+              <h2 class="p-3"><a href="/jungle">Jungle</a></h2>
             </div>
             <div>
-              <img class="rounded w-100  p-3 mx-auto d-block" src="/images/habitats/Savane.jpg"alt="savane" height="200px" width="220px"> 
-              <h2><a href="/savane">Savane</a></h2>
+              <img class="rounded w-100 mx-auto d-block" src="/images/habitats/Savane.jpg"alt="savane" height="200px" width="220px"> 
+              <h2 class="p-3"><a href="/savane">Savane</a></h2>
             </div>
             <div>
-              <img class="w-100 rounded p-3 mx-auto d-block" src="/images/habitats/Marais.jpg" alt="marais" height="200px" width="220px"> 
-              <h2><a href="/marais">Marais</a></h2>
+              <img class="w-100 rounded mx-auto d-block" src="/images/habitats/Marais.jpg" alt="marais" height="200px" width="220px"> 
+              <h2 class="p-3"><a href="/marais">Marais</a></h2>
             </div>
           </div>
         </div>
