--- a/pages/habitats/marais.html
+++ b/pages/habitats/marais.html
@@ -21,20 +21,24 @@
         <div class="row row-cols-2 row-cols-md-3 row-cols-lg-3 text-center">
             <div>
                 <img class="w-100 rounded mx-auto d-block" src="/images/animaux/marais/Crocodile.jpg" alt="Crocodile" height="220px"> 
-                <h2 class="p-3"><a href="/crocodile">Koko</br>Le Crocodile</a></h2>
+                <h2 class="p-3"><a href="/crocodile">Gator</br>Le Crocodile</a></h2>
               </div>
               <div>
-                <img class="w-100 rounded mx-auto d-block" src="/images/animaux/marais/hippopotame.jpg"alt="Hippopotame" height="220px"> 
-                <h2 class="p-3"><a href="/hippopotame">Maya</br>L'Hippopotame</a></h2>
+                <img class="w-100 rounded mx-auto d-block" src="/images/animaux/marais/Hippopotame.jpg"alt="Hippopotame" height="220px"> 
+                <h2 class="p-3"><a href="/hippopotame">Bongo</br>L'Hippopotame</a></h2>
               </div>
               <div>
                 <img class="w-100 rounded mx-auto d-block" src="/images/animaux/marais/Ibis.jpg" alt="Ibis" height="220px"> 
-                <h2 class="p-3"><a href="/python">Kaa</br>L'Ibis</a></h2>
+                <h2 class="p-3"><a href="/python">Ivoire</br>L'Ibis</a></h2>
               </div>
               <div>
                 <img class="w-100 rounded mx-auto d-block" src="/images/animaux/marais/Tortue.jpg" alt="Tortue" height="220px"> 
-                <h2 class="p-3"><a href="/perroquet">Rio</br>La Tortue</a></h2>
+                <h2 class="p-3"><a href="/perroquet">Shelly</br>La Tortue</a></h2>
               </div>
+        </div>
+        <div class="row justify-content-evenly p-3">
+          <button type="button" class="btn btn-primary col-4"><a class="text-white" href="/jungle"><h2>Jungle</h2></a></button>
+          <button type="button" class="btn btn-primary col-4"><a class="text-white" href="/savane"><h2>Savane</h2></a></button>
         </div>
     </div>
 </div>
