Ajout page gorille

--- a/pages/habitats/habitats.html
+++ b/pages/habitats/habitats.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="bg-warning text-white text-justify mx-0 pb-0" id="longeur">
+  <div class="bg-warning text-white text-justify mx-0 pb-0">
     <div class="row container ms-auto">
         <div>
             <h3 class="text-secondary p-3 text-center"></br>Nos habitats</h3>
