--- a/pages/habitats/marais.html
+++ b/pages/habitats/marais.html
@@ -1,6 +1,6 @@
 <div>
     <div class="row">
-        <img class="img-fluid row-cols-lg-12" src="/images/Maraismodif.jpg"></img>
+        <img class="img-fluid row-cols-lg-12" src="/images/habitats/Maraismodif.jpg"></img>
     </div>
     <div class="container">
         <div class="text-secondary text-center p-3">
